wp_contextual/tests/error_unexpected_wp_context_ident.stderr
error: Expected 'edit', 'embed' or 'view', found 'Edit'
 --> tests/error_unexpected_wp_context_ident.rs:5:17
  |
5 |     #[WpContext(Edit)]
  |                 ^^^^
